--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -32,49 +32,60 @@ jobs:
         echo "Full directory tree:"
         tree /f
       
+    - name: Check solution file
+      run: |
+        echo "Checking for solution file..."
+        if (Test-Path "*.sln") {
+            Get-ChildItem -Filter *.sln
+        } else {
+            echo "No solution file found!"
+            exit 1
+        }
+
     - name: Restore NuGet packages
       run: |
         echo "Restoring NuGet packages..."
-        nuget restore "$(pwd)\MIS-Project-.sln" -Verbosity detailed
+        $solutionFile = Get-ChildItem -Filter *.sln | Select-Object -First 1
+        nuget restore $solutionFile.FullName -Verbosity detailed
         echo "NuGet restore completed."
 
     - name: Build solution
       run: |
         echo "Starting build process..."
-        msbuild "$(pwd)\MIS-Project-.sln" /p:Configuration=Release /p:Platform="Any CPU" /p:RestorePackagesConfig=true /v:diag /p:DeployOnBuild=true /p:OutDir="$(pwd)\bin\Release"
+        $solutionFile = Get-ChildItem -Filter *.sln | Select-Object -First 1
+        msbuild $solutionFile.FullName /p:Configuration=Release /p:Platform="Any CPU" /p:RestorePackagesConfig=true /v:diag /p:DeployOnBuild=true /p:OutDir="$env:GITHUB_WORKSPACE\bin\Release" /bl:msbuild.binlog
         echo "Build process completed."
 
     - name: Show error log
       if: failure()
       run: |
         echo "Checking for error logs..."
-        if (Test-Path LoginVendor\obj\Release\*.log) {
-            Get-Content LoginVendor\obj\Release\*.log
-        } else {
-            echo "No error log files found"
-        }
+        echo "MSBuild Binary Log:"
         if (Test-Path msbuild.binlog) {
-            Get-Content msbuild.binlog
-        } else {
-            echo "No MSBuild binary log found"
+            msbuild -pp:detailed
+            msbuild -bl:msbuild.binlog
+        }
+        echo "Release Logs:"
+        Get-ChildItem -Path . -Filter *.log -Recurse | ForEach-Object {
+            echo "Log file: $($_.FullName)"
+            Get-Content $_.FullName
         }
 
     - name: List build output
       run: |
         echo "Checking build output directory..."
-        if (Test-Path LoginVendor\bin\Release) {
-            Get-ChildItem LoginVendor\bin\Release -Recurse
-        } else {
-            echo "Build output directory not found"
-        }
+        Get-ChildItem -Path . -Recurse
       if: always()
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: app-build
-        path: LoginVendor\bin\Release\
-      if: success()
+        path: |
+          bin/Release/
+          *.log
+          msbuild.binlog
+      if: always()
 
     - name: Report build status
       run: |
