Update MySQL connection to use dedicated application user

--- a/LoginVendor/App.config
+++ b/LoginVendor/App.config
@@ -13,7 +13,7 @@
             connectionString="Data Source=DESKTOP-BPLDLKV\SQLEXPRESS;Initial Catalog=VendorLogin;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
         <add name="MySQLConnection"
-            connectionString="Server=localhost;Database=vendordb;Uid=root;Pwd=Bshow123!;Port=3306;SslMode=Required;AllowPublicKeyRetrieval=True;"
+            connectionString="Server=localhost;Database=vendordb;Uid=vendorapp;Pwd=Vendor123!;Port=3306;SslMode=None;AllowPublicKeyRetrieval=True;"
             providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <startup> 
